# JHShadow

./: DontREADME.md  README.md  clear_me.rs  hugo_clean  hugo_compile  install_shadow_dependencies_fedora  rust-toolchain.toml
communication_api/: README.md
communication_api/C/: README.md  c_program  c_program.c  libc_zermia.h  shadow.yaml
communication_api/java/: README.md  RustInterface.h  RustInterface.java  myJavaProgram.java  shadow.yaml
communication_api/python/: README.md  pylib.py  python_program.py
communication_api/rust/: README.md
communication_api/rust/rust_program/: Cargo.toml
examples/zermia/: client.py  server.py  shadow.yaml
examples/zermia/shadow.data/: processed-config.yaml  sim-stats.json
joao-hugo-exemplos/client_server_do_relatorio/: Cargo.toml  README.txt  run  shadow.yaml
joao-hugo-exemplos/client_server_do_relatorio/shadow.data/: processed-config.yaml  sim-stats.json
joao-hugo-exemplos/client_server_do_relatorio/shadow.data/hosts/client/: client_relatorio.1000.stdout
joao-hugo-exemplos/client_server_do_relatorio/shadow.data/hosts/server/: server_relatorio.1000.stdout
joao-hugo-exemplos/client_server_do_relatorio/src/: client_relatorio.rs  server_relatorio.rs
joao-hugo-exemplos/communicator/: Cargo.toml  README.md  run  shadow.yaml
joao-hugo-exemplos/communicator/src/: receiver.rs  sender.rs
joao-hugo-exemplos/hugo-shadow-bft-starter-main/: .syst_conf  general_config.yaml  gsc  network.gml  shadow.yaml
joao-hugo-exemplos/python_client_server/: README.md  client.py  pylib.py  run  server.py  shadow.yaml
joao-hugo-exemplos/simple_tcp_server_client/: .gitignore  README.md  run  shadow.yaml
joao-hugo-exemplos/zermia/: client.py  run  server.py  shadow.yaml
src/: CMakeLists.txt  Cargo.toml
src/lib/: CMakeLists.txt
src/lib/zermia_lib/: CMakeLists.txt  Cargo.toml
src/lib/zermia_lib/src/: lib.rs  message.rs  zermia_lib.h
src/main/: CMakeLists.txt  Cargo.toml  build.rs
src/main/core/: manager.rs  worker.rs
zermia_monitor/: Cargo.toml  run
zermia_monitor/src/: main.rs
(+27 files in other folders)
