[package]
name = "communicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to receive communication from outside the simulation
name = "jh_receiver"
path = "src/receiver.rs"

[[bin]] # Bin to send message from inside the simulation
name = "jh_sender"
path = "src/sender.rs"


[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
libc = { version = "0.2.97", default-features = false, features = ["std"] }
